# dio_assistente_ia_farmachat

./: .gitignore  README.md  main.py  pyproject.toml
chroma_db/cdcf7cae-7dbb-4da2-b49d-4712138b0823/: index_metadata.pickle
util/: agent.py  ingest_retriver.py  use_retriever.py
