[project]
name = "farma-chat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "chromadb>=1.5.8",
    "docling>=2.91.0",
    "einops>=0.8.2",
    "huggingface-hub>=1.12.0",
    "langchain>=1.2.15",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.3.2",
    "langchain-huggingface>=1.2.2",
    "langchain-ollama>=1.1.0",
    "langgraph>=1.1.10",
    "mlflow>=3.11.1",
    "ollama>=0.6.1",
    "pydantic>=2.13.3",
    "python-dotenv>=1.2.2",
    "rank-bm25>=0.2.2",
    "rich>=15.0.0",
    "sentence-transformers>=5.4.1",
    "streamlit>=1.56.0",
    "tiktoken>=0.12.0",
    "tqdm>=4.67.3",
    "transformers>=5.6.2",
    "watchdog>=6.0.0",
]

[tool.uv.workspace]
members = [
    "rag-pipeline",
]
